tests/ui/control_path_wire_self_send.stderr
error[E0080]: evaluation panicked: wire control messages require cross-role send
 --> $RUST/core/src/panic.rs
  |
  = note: evaluation of `hibana::g::send::<0, 0, hibana::g::Msg<110, hibana::integration::cap::GenericCapToken<LoadBeginKind>>, 0>::{constant#0}` failed here
  |
 ::: src/g.rs
  |
  |             panic!("{}", error.message());
  |             ----------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/g.rs
  |
  | /     const {
  | |         if FROM >= ROLE_DOMAIN_SIZE || TO >= ROLE_DOMAIN_SIZE {
  | |             panic!("{}", ROLE_INDEX_ERROR);
... |
  | |     }
  | |_____^

note: the above error was encountered while instantiating `fn send::<0, 0, Msg<110, GenericCapToken<LoadBeginKind>>, 0>`
  --> tests/ui/control_path_wire_self_send.rs:13:13
   |
13 |       let _ = g::send::<
   |  _____________^
14 | |         0,
15 | |         0,
16 | |         g::Msg<110, GenericCapToken<LoadBeginKind>>,
17 | |         0,
18 | |     >();
   | |_______^
